# astroids

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: mac.yml  ubuntu.yml  windows.yml
include/astroids/: astroid.h  bullet.h  error.h  file.h  input.h  lives.h  player.h  quad.h  resources.h  score.h  shader.h  sprite.h  state.h  texture.h  titles.h  window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: astroid.c  bullet.c  file.c  input.c  lives.c  main.c  player.c  quad.c  resources.c  score.c  shader.c  sprite.c  texture.c  titles.c  window.c
src/shaders/: fragment.glsl  vertex.glsl
